--- a/Semester_project.ipynb
+++ b/Semester_project.ipynb
@@ -459,7 +459,7 @@
         "id": "9dEf5puZRJ5m"
       },
       "source": [
-        "Building and training of a self-designed CNN "
+        "Building and training of a self-designed CNN\n"
       ]
     },
     {
@@ -1015,6 +1015,16 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9zz2d09taowg"
+      },
+      "source": [
+        "We can see the pretrained network gave us much better results\n",
+        "\n"
       ]
     }
   ]
